fixed the home page and some issues with the footer overlapping content

--- a/source/scss/_footer.scss
+++ b/source/scss/_footer.scss
@@ -1,13 +1,13 @@
 /* Sticky footer styles
 -------------------------------------------------- */
 .footer {
-  position: absolute;
+  clear: both;
   bottom: 0;
   width: 100%;
   /* Set the fixed height of the footer here */
-  height: 60px;
+  height: 40px;
   background-color: #f5f5f5;
-  
+  text-align: center;
   > .container {
   padding-right: 15px;
   padding-left: 15px;
