--- a/source/scss/grid-box.scss
+++ b/source/scss/grid-box.scss
@@ -1,6 +1,6 @@
 @import 'variables';
 .grid-container {
-
+  margin: 0 0 6em 0;
   .grid-box {
 
     width: 300px;
