--- a/source/scss/index.scss
+++ b/source/scss/index.scss
@@ -10,7 +10,6 @@ body {
 	font-weight: 300;
 	line-height: 1.5;
 	margin-top: 50px;
-	margin-bottom: 60px;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -25,7 +24,6 @@ h1 {
 }
 
 p{
-
 	color: #2f2f2f;
 }
 
